--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,7 @@
-
+services:
+  - type: web
+    name: my-flask-app
+    env: python
+    buildCommand: |
+      python -m venv .venv
+      source .venv/bin/activate
